# bedrock

./: .editorconfig  .gitignore  .gitmodules  BEDROCK_SPRINT4.5_PLAN.md  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.backup  CMakePresets.json  LOCAL_TEST.md  README.md  SPRINT_4.2_CHUNK_2A_ECHO_RPC_CMAKE_PLAN.md  SPRINT_4.2_DAY1_BEDROCK_PHASE0_VALIDATION.md  WP0_CHUNK_0.1_SUMMARY.md  WP0_CHUNK_0.2_SUMMARY.md  WP0_CHUNK_0.3_SUMMARY.md  WP0_CHUNK_0.4_SUMMARY.md  WP0_CHUNK_0.5_SUMMARY.md  WP0_CHUNK_0.6_SUMMARY.md  WP1B_CHUNK1_REFACTOR_COMPLETE.md  WP1_CHUNK_7_PLAN.md  WP1_CHUNK_7_SUMMARY.md  close-dependabot-pr.sh  test_commit_check.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  featire_request.md
.github/workflows/: auto-merge-dependabot.yml  auto-merge.yml  aws-heartbeat.yml  ci-linux-phase0.yml  ci.yaml  ci.yml  ci_full_original.yml  codeql.yml  pr-guard.yml  pr-guard.yml.disabled  underlord-test-file.yml
.underlord/: AI_OPERATIONS_GUIDE.md  METRICS.md  config.json  last-preflight.txt  preflight.sh
.underlord/docs/: ARCHITECTURE_NOTES.md  PROJECT_OVERVIEW.md  SPRINT_HISTORY.md
.underlord/sprints/003a/: report.md  stop-the-line-001.md  stop-the-line-002.md
cmake/: Dependencies.cmake  Options.cmake  Targets.cmake  ToolchainCcache.cmake
core/: CMakeLists.txt
core/include/bedrock/: bedrock_math.hpp  threading.hpp
core/src/: bedrock_math.cpp  threading.cpp  threading_test.cpp
docs/: BEDROCK_ARCHITECTURE.md  BEDROCK_BUILD.md  C++23_UPGRADE_PLAN.md  CODING_STANDARDS.md  CPP_CODING_STANDARDS.md  DEPLOYMENT.md  DEVELOPMENT_WORKFLOW.md  OPENCASCADE_INTEGRATION.md  REPOSITORY_STRUCTURE.md  SOM_OVERVIEW.md  SQ1_CPP23_FEASIBILITY.md  TESTING.md  THREADING.md  UNDERLORD_BRANCH_PROTECTION.md  UNDERLORD_LARGE_DIFF_TEST.md  VERSIONS.md  dev-setup.md  engine-api.md  workflow-dependencies.md
docs/adr/: 0002-bedrock-owns-execution-copies.md
docs/architecture/: overview.md  transport.md
docs/control/: CONTROL_QA_OVERVIEW.md
docs/sprint4/: CONTROL_REV_5.3.md  PALANTIR_IMPLEMENTATION_STATUS.md
docs/sprint4.5/: CHUNK_1.1_VERIFICATION.md  CHUNK_1.2_VERIFICATION.md  CHUNK_1.3_VERIFICATION.md  CHUNK_1.4_VERIFICATION.md  CHUNK_1.5_VERIFICATION.md  CHUNK_1.6_VERIFICATION.md  CHUNK_2.1_VERIFICATION.md  CHUNK_2.2_VERIFICATION.md  CHUNK_2.4_VERIFICATION.md  CHUNK_3.1_VERIFICATION.md  CHUNK_3.2_VERIFICATION.md  CHUNK_3.3_VERIFICATION.md  CHUNK_3.4_VERIFICATION.md  CHUNK_3.5_VERIFICATION.md  CHUNK_3.6_VERIFICATION.md  CHUNK_4.1_VERIFICATION.md  CHUNK_4.2_VERIFICATION.md  CHUNK_4.3_VERIFICATION.md  CHUNK_4.4_VERIFICATION.md  CHUNK_5.0_VERIFICATION.md  CHUNK_5.1_VERIFICATION.md  CHUNK_5.2_VERIFICATION.md  CHUNK_5.3_VERIFICATION.md  CHUNK_5.4_VERIFICATION.md  CHUNK_6.1_VERIFICATION.md  CHUNK_6.2_VERIFICATION.md  CHUNK_6.3_VERIFICATION.md  DEMO_MODE_AUDIT.md  DOC_COHERENCE_ISSUES.md  FIXUP_SPRINT_CONTROL.md  IMPLEMENTATION_PLAN.md  LIFETIME_AUDIT.md  SPRINT_4_5_REPORT.md
docs/sprint4/results/: p2_checklist.md
experiments/: cpp23_probe.cpp  simple_job.cpp
include/bedrock/: bedrock_engine.hpp  engine.hpp  identity.h  plugin_interface.hpp
include/bedrock/geom/: step_export.hpp
include/bedrock/som/: types.hpp
proto/: bedrock_echo.proto
scripts/: auto-merge.sh  doc-review.sh  preflight.sh
src/: bedrock_engine.cpp
src/echo/: echo_service_impl.cpp  echo_service_impl.h
src/engine/: engine.cpp
src/geom/: step_export.cpp
src/palantir/: CapabilitiesService.cpp  CapabilitiesService.hpp  EnvelopeHelpers.cpp  EnvelopeHelpers.hpp  PalantirServer.cpp  PalantirServer.hpp  bedrock_server.cpp
src/plugin/: plugin_interface.cpp
tests/: CMakeLists.txt  bedrock_echo_sanity.cpp  bedrock_sanity.cpp  bedrock_transport_deps_sanity.cpp  smoke_step_main.cpp  test_identity.cpp  test_math.cpp  test_palantir_xysine.cpp  test_xysine_compute.cpp
tests/integration/: CMakeLists.txt  CapabilitiesIntegrationTest.cpp  EdgeCasesIntegrationTest.cpp  ErrorCasesIntegrationTest.cpp  IntegrationTestClient.cpp  IntegrationTestClient.hpp  IntegrationTestServerFixture.cpp  IntegrationTestServerFixture.hpp  XYSineIntegrationTest.cpp  integration_main.cpp
tests/palantir/: CapabilitiesService_test.cpp  EnvelopeHelpers_test.cpp  ErrorResponse_test.cpp
